# istio-filters

./: .gitignore  README.md
apps/: httpbin-gateway.yaml  httpbin-jwt.yaml  httpbin-org-se.yaml  httpbin.yaml  session-1.yaml
filters/: Makefile
filters/.cargo/: config
filters/hello-rust/src/: main.rs
filters/jwt-claims-header/: Cargo.toml  envoy-filter.yaml
filters/jwt-claims-header/src/: config.rs  factory.rs  filter.rs  lib.rs
filters/jwt-claims-header/wasm/module/: Cargo.toml
filters/jwt-claims-header/wasm/module/src/: lib.rs
filters/jwt-from-cookie/: Cargo.toml  envoy-filter.yaml
filters/jwt-from-cookie/src/: config.rs  factory.rs  filter.rs  lib.rs
filters/jwt-from-cookie/wasm/module/: Cargo.toml
filters/jwt-from-cookie/wasm/module/src/: lib.rs
filters/session-query-rewrite/: Cargo.toml  envoy-filter-gw.yaml  envoy-filter.yaml  sessions.yaml
filters/session-query-rewrite/src/: config.rs  factory.rs  filter.rs  lib.rs
filters/session-query-rewrite/wasm/module/: Cargo.toml
filters/session-query-rewrite/wasm/module/src/: lib.rs
playground/hello-rust/: Cargo.toml
playground/hello-rust/src/: main.rs
services/: istio-operator.yaml  istio.yaml  kiali-gateway.yaml
