[package]
name = "jwt-claims-header-module"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
jwt-claims-header = { path = "../.." }
envoy = { package = "envoy-sdk", version = "0.2.0-alpha.1" }
