[package]
name = "jwt-from-cookie-module"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
jwt-from-cookie = { path = "../.." }
envoy = { package = "envoy-sdk", version = "0.2.0-alpha.1" }
